--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -56,6 +56,7 @@
 			.js("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js")
 			.js("js/markdown-it-plugins-8.min.js")
 			.js("js/polyfill.js")
+			.js("//cdn.plot.ly/plotly-latest.min.js")
 			;
 	   	</script>    
 	
