--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -56,8 +56,10 @@
 			.js("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js")
 			.js("js/markdown-it-plugins-8.min.js")
 			.js("js/polyfill.js")
+			.js("js/xss.min.js")
 			;
-	   	</script>    
+	   	</script>
+	   	<!-- xss.min.js from https://github.com/leizongmin/js-xss -->
 	
 		<title>Sage Synapse : Contribute to the Cure</title>
 		
