--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -57,6 +57,7 @@
 			.js("js/markdown-it-plugins-9.min.js")
 			.js("js/polyfill.js")
 			.js("js/xss.min.js")
+			.js("js/pica.min.js")
 			;
 	   	</script>
 	   	<!-- xss.min.js from https://github.com/leizongmin/js-xss -->
