--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -58,7 +58,7 @@
 			.js("js/polyfill.js")
 			.js("js/xss.min.js")
 			.js("js/pica.min.js")
-			.js("//cdn.plot.ly/plotly-latest.min.js")
+			.js("//cdn.plot.ly/plotly-1.26.1.min.js")
 			;
 	   	</script>
 	   	<!-- xss.min.js from https://github.com/leizongmin/js-xss -->
