also web app manifest file to prompt install on mobile (or chrome os).  add placeholder service worker that handles the fetch event.

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -36,6 +36,7 @@
 		
 		<link rel="icon" type="image/png"  href="favicon.png?v=3" />
 		<link href="/opensearch.xml" rel="search" title="Synapse" type="application/opensearchdescription+xml" />
+		<link rel="manifest" href="manifest.json" />
 		<link rel="stylesheet" type="text/css" href="Portal.css" />
 		
 		<script src="js/head.load.min.js"></script>
@@ -66,6 +67,7 @@
 			head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css");
 			head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/default.min.css");
 			head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
+			head.load("js/register-service-worker.js");
 	   	</script>
 	   	<!-- xss.min.js from https://github.com/leizongmin/js-xss -->
 		
