--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -76,7 +76,7 @@
 		<!-- be added before this line.                -->
 		<!--                                           -->
 		<script type="text/javascript" language="javascript" src="js/compiled-closure-lib.js"></script>
-		<script type="text/javascript" language="javascript" src="Portal/Portal.nocache.js" async></script>
+		<script type="text/javascript" language="javascript" src="http://localhost.synapse.org/Portal/Portal.nocache.js" async></script>
 	</head>
 	<body style="overflow-y: auto">
 		<div>
