force http (to simplify cdn setup)

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -46,8 +46,8 @@
 		</script>
 		
 		<script>
-			// determine cdn endpoint (staging, prod, or dev)
-			var cdnEndpoint = "//cdn-" + location.hostname + "/";
+			// determine cdn endpoint (staging, prod, or dev), force http (to simplify cdn setup)
+			var cdnEndpoint = "http://cdn-" + location.hostname + "/";
 			var localhostRegex = /^(127[.]{1}0[.]{1}0[.]{1}1)$|^(localhost)$/;
 			if (localhostRegex.test(location.hostname)) {
 				cdnEndpoint = "";
