--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -94,7 +94,7 @@
 			
 	   	</script>
 	</head>
-	<body style="overflow-y: auto">
+	<body id="body" style="overflow-y: auto">
 		<div>
 			<!-- GWT history support -->
 			<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position: absolute; width: 0; height: 0; border: 0"></iframe>
