add init script for amplitude

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -45,6 +45,8 @@
 			ga('send', 'pageview');
 		</script>
 		
+		<script src="js/amplitude-init.js"></script>
+		
 		<script>
 			// determine cdn endpoint (staging, prod, or dev)
 			var cdnEndpoint = "//cdn-" + location.hostname + "/";
