--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -45,7 +45,7 @@
 			ga('send', 'pageview');
 		</script>
 		
-		<script src="js/amplitude-init.js"></script>
+		<script src="js/heap-init.js"></script>
 		
 		<script>
 			// determine cdn endpoint (staging, prod, or dev)
