async load heap analytics, remove mixpanel load

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -45,7 +45,7 @@
 			ga('send', 'pageview');
 		</script>
 		
-		<script src="js/heap-init.js"></script>
+		
 		
 		<script>
 			// determine cdn endpoint (staging, prod, or dev)
@@ -81,7 +81,7 @@
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
-				head.load(cdnEndpoint + "js/init-mixpanel.js");
+				head.load(cdnEndpoint + "js/heap-init.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
