--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -100,7 +100,7 @@
 		<div>
 			<!-- GWT history support -->
 			<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position: absolute; width: 0; height: 0; border: 0"></iframe>
-	
+			<div id="dropzone" class="dropzone"></div>
 			<noscript>
 				<div
 					style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
