--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -101,7 +101,7 @@
 			<!-- GWT history support -->
 			<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position: absolute; width: 0; height: 0; border: 0"></iframe>
 			<div id="dropzone" class="dropzone">
-				<h2>
+				<h2 class="center" style="color:white; padding-top: 180px">
 					<span class="fa fa-cloud-upload"></span>
 					Drop Files to Upload
 				</h2>
