change Choose File button to Drop files to upload, or Browse...

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -103,7 +103,7 @@
 			<div id="dropzone" class="dropzone">
 				<h2 class="center" style="color:white; padding-top: 180px">
 					<span class="fa fa-cloud-upload"></span>
-					Drop Files to Upload
+					Drop files to upload
 				</h2>
 			</div>
 			<noscript>
