SWC-4008: still get portal css from cdn, but add query parameter that includes synapse version so that it  makes the request unique when a new build is deployed

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -54,8 +54,10 @@
 			if (localhostRegex.test(location.hostname)) {
 				cdnEndpoint = "";
 			}
+			window.cdnEndpoint = cdnEndpoint;
+			
 			var link = document.createElement( "link" );
-			link.href = cdnEndpoint + "Portal.css";
+			link.href = cdnEndpoint + "loading.css";
 			link.type = "text/css";
 			link.rel = "stylesheet";
 			document.head.appendChild(link);
