change portal css file name to force cache miss in cloudfront (each week)

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -64,6 +64,7 @@
 
 			var script = document.createElement('script');
 			script.onload = function () {
+				head.load(cdnEndpoint + "Portal1.css");
 				head.load("//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js");
 				head.load(cdnEndpoint + "js/spark-md5.min.js");
