--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -84,6 +84,10 @@
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
+				head.load("//unpkg.com/react@16/umd/react.production.min.js");
+				head.load("//unpkg.com/react-dom@16/umd/react-dom.production.min.js");
+				head.load(cdnEndpoint + "js/react-components/react-synapse-components.min.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
