--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -85,9 +85,9 @@
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
-				head.load("//unpkg.com/react@16/umd/react.production.min.js");
-				head.load("//unpkg.com/react-dom@16/umd/react-dom.production.min.js");
-				head.load(cdnEndpoint + "js/react-components/react-synapse-components.min.js");
+				head.load("https://unpkg.com/react@16.2.0/umd/react.production.min.js");
+				head.load("https://unpkg.com/react-dom@16.2.0/umd/react-dom.production.min.js");
+				head.load(cdnEndpoint + "js/react-components/user-list-view.min.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
