--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -87,6 +87,7 @@
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
 				head.load("https://unpkg.com/react@16.2.0/umd/react.production.min.js");
 				head.load("https://unpkg.com/react-dom@16.2.0/umd/react-dom.production.min.js");
+				head.load("https://cdn.pendo.io/agent/static/f155f8f7-30b9-4cc3-671a-70f99f803504/pendo.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
