--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -84,9 +84,10 @@
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
-				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
 				head.load("https://unpkg.com/react@16.2.0/umd/react.production.min.js");
 				head.load("https://unpkg.com/react-dom@16.2.0/umd/react-dom.production.min.js");
+				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.1/croppie.min.css");
+				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.1/croppie.min.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
