--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -72,7 +72,7 @@
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.scinot.js");
 				head.load(cdnEndpoint + "js/highlight.pack.js");
-				head.load("//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.1.8/jsPlumb.min.js");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.6.9/js/jsplumb.min.js");
 				head.load(cdnEndpoint + "js/init-nchart.js");
 				head.load("//cdn.jsdelivr.net/npm/moment@2.21.0/min/moment.min.js");
 				head.load("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js");
@@ -81,13 +81,13 @@
 				head.load(cdnEndpoint + "js/xss.min.js");
 				head.load(cdnEndpoint + "js/pica.min.js");
 				head.load("//www.google-analytics.com/analytics.js");
-				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css");
+				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
 				head.load("https://unpkg.com/react@16.2.0/umd/react.production.min.js");
 				head.load("https://unpkg.com/react-dom@16.2.0/umd/react-dom.production.min.js");
-				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.1/croppie.min.css");
-				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.1/croppie.min.js");
+				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.css");
+				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.js");
 				head.load("https://cdn.pendo.io/agent/static/f155f8f7-30b9-4cc3-671a-70f99f803504/pendo.js");
 				head.load(cdnEndpoint + "js/diff/diffview.css");
 			};
