--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -72,7 +72,7 @@
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.scinot.js");
 				head.load(cdnEndpoint + "js/highlight.pack.js");
-				head.load("//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.6.9/js/jsplumb.min.js");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.1.8/jsPlumb.min.js");
 				head.load(cdnEndpoint + "js/init-nchart.js");
 				head.load("//cdn.jsdelivr.net/npm/moment@2.21.0/min/moment.min.js");
 				head.load("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js");
