update js dependencies

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -67,19 +67,19 @@
 				head.load("Portal.css");
 				head.load("//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js");
-				head.load(cdnEndpoint + "js/spark-md5.min.js");
-				head.load(cdnEndpoint + "js/swfobject/swfobject.js");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.scinot.js");
 				head.load(cdnEndpoint + "js/highlight.pack.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.1.8/jsPlumb.min.js");
 				head.load(cdnEndpoint + "js/init-nchart.js");
-				head.load("//cdn.jsdelivr.net/npm/moment@2.21.0/min/moment.min.js");
+				head.load("//cdn.jsdelivr.net/npm/moment@2.22.1/min/moment.min.js");
 				head.load("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js");
 				head.load(cdnEndpoint + "js/markdown-it-plugins-11.min.js");
 				head.load(cdnEndpoint + "js/polyfill.js");
 				head.load(cdnEndpoint + "js/xss.min.js");
-				head.load(cdnEndpoint + "js/pica.min.js");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/pica/4.1.1/pica.min.js");
 				head.load("//www.google-analytics.com/analytics.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
