do not use a cdn for local or dev builds

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -48,10 +48,10 @@
 		
 		
 		<script>
-			// determine cdn endpoint (staging, prod, or dev)
+			// determine cdn endpoint (staging or prod, do not use a cdn for local or dev builds)
 			var cdnEndpoint = "//cdn-" + location.hostname + "/";
-			var localhostRegex = /^(127[.]{1}0[.]{1}0[.]{1}1)$|^(localhost)$/;
-			if (localhostRegex.test(location.hostname)) {
+			var localhostRegex = /[-.]synapse[-.]org$/;
+			if (!localhostRegex.test(location.hostname)) {
 				cdnEndpoint = "";
 			}
 			window.cdnEndpoint = cdnEndpoint;
