--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -50,8 +50,8 @@
 		<script>
 			// determine cdn endpoint (staging or prod, do not use a cdn for local or dev builds)
 			var cdnEndpoint = "//cdn-" + location.hostname + "/";
-			var localhostRegex = /[-.]synapse[-.]org$/;
-			if (!localhostRegex.test(location.hostname)) {
+			var synapseOrgRegex = /[-.]synapse[-.]org$/;
+			if (!synapseOrgRegex.test(location.hostname)) {
 				cdnEndpoint = "";
 			}
 			window.cdnEndpoint = cdnEndpoint;
