--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -77,7 +77,7 @@
 				head.load("//cdn.jsdelivr.net/npm/moment@2.22.1/min/moment.min.js");
 				head.load("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js");
 				head.load(cdnEndpoint + "js/markdown-it-plugins-11.min.js");
-				head.load(cdnEndpoint + "js/polyfill.js");
+				head.load(cdnEndpoint + "js/polyfill-2.js");
 				head.load(cdnEndpoint + "js/xss.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/pica/4.1.1/pica.min.js");
 				head.load("//www.google-analytics.com/analytics.js");
