roll back change to cryptojs.  for very large files, cryptojs falls over.  but iterative sparkmd5 does not.

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -67,8 +67,7 @@
 				head.load("Portal.css");
 				head.load("//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js");
-				head.load("//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.min.js");
-				head.load("//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.min.js");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.scinot.js");
