--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -78,6 +78,8 @@
 				head.load("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js");
 				head.load(cdnEndpoint + "js/markdown-it-plugins-13.min.js");
 				head.load(cdnEndpoint + "js/polyfill-2.js");
+				head.load(cdnEndpoint + "js/details-shim.min.js");
+				head.load(cdnEndpoint + "css/details-shim.min.css");
 				head.load(cdnEndpoint + "js/xss.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/pica/4.1.1/pica.min.js");
 				head.load("//www.google-analytics.com/analytics.js");
