--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -140,20 +140,7 @@
 				<div id="alertContainer"></div>
 			</div>
 			<div id="initialLoadingUI" style="padding-top: 180px">
-				<div class="sk-circle" style="width: 80px; height: 80px;">
-					<div class="sk-circle1 sk-child"></div>
-					<div class="sk-circle2 sk-child"></div>
-					<div class="sk-circle3 sk-child"></div>
-					<div class="sk-circle4 sk-child"></div>
-					<div class="sk-circle5 sk-child"></div>
-					<div class="sk-circle6 sk-child"></div>
-					<div class="sk-circle7 sk-child"></div>
-					<div class="sk-circle8 sk-child"></div>
-					<div class="sk-circle9 sk-child"></div>
-					<div class="sk-circle10 sk-child"></div>
-					<div class="sk-circle11 sk-child"></div>
-					<div class="sk-circle12 sk-child"></div>
-				</div>
+				<div class="spinner" style="width:80px; height:80px; background-size:80px 80px;"> </div>
 				<h4 style="color: #1e7098; margin-top: 10px; font-family: Sans-serif; text-align:center">Loading...</h4>
 			</div>
 			<div id="headerPanel"></div>
