rename loading css to not reference cdn

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -57,7 +57,7 @@
 			window.cdnEndpoint = cdnEndpoint;
 			
 			var link = document.createElement( "link" );
-			link.href = cdnEndpoint + "loading.css";
+			link.href = cdnEndpoint + "loadinglogo.css";
 			link.rel = "stylesheet";
 			document.head.appendChild(link);
 
