--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -64,6 +64,7 @@
 			var script = document.createElement('script');
 			script.onload = function () {
 				head.load("Portal.css");
+				head.load("//fonts.googleapis.com/css?family=Lato"),
 				head.load("//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js");
