fix Synapse logo to use Lato with letter spacing

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -37,7 +37,7 @@
 		<link rel="icon" href="favicon.png?v=4" />
 		<link href="/opensearch.xml" rel="search" title="Synapse" type="application/opensearchdescription+xml" />
 		<link rel="manifest" href="manifest.json" />
-		
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato" />
 		<!-- Google Analytics -->
 		<script>
 			window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -64,7 +64,6 @@
 			var script = document.createElement('script');
 			script.onload = function () {
 				head.load("Portal.css");
-				head.load("//fonts.googleapis.com/css?family=Lato"),
 				head.load("//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js");
